RESOLVED FIXED66671
Text overlaps with the floats
https://bugs.webkit.org/show_bug.cgi?id=66671
Summary Text overlaps with the floats
Alexandru Chiculita
Reported 2011-08-22 06:33:03 PDT
Created attachment 104671 [details] Test case The problem is that LineWidth::fitBelowFloats is not updating the m_left and m_right fields. Next time LineWidth::shrinkAvailableWidthForNewFloatIfNeeded is called the width is recalculated, with the old values. See the attached test case for more info.
Attachments
Test case (734 bytes, text/html)
2011-08-22 06:33 PDT, Alexandru Chiculita
no flags
Patch V1 (7.44 KB, patch)
2011-08-23 04:00 PDT, Alexandru Chiculita
no flags
Patch V2 (23.59 KB, patch)
2011-08-23 04:37 PDT, Alexandru Chiculita
webkit.review.bot: commit-queue-
Patch V4 (25.59 KB, patch)
2011-08-23 05:09 PDT, Alexandru Chiculita
no flags
Patch V5 (25.59 KB, patch)
2011-08-23 05:24 PDT, Alexandru Chiculita
no flags
Alexandru Chiculita
Comment 1 2011-08-23 04:00:12 PDT
Created attachment 104811 [details] Patch V1
Alexandru Chiculita
Comment 2 2011-08-23 04:37:13 PDT
Created attachment 104820 [details] Patch V2 Moved expected results to mac platform.
WebKit Review Bot
Comment 3 2011-08-23 05:06:09 PDT
Comment on attachment 104820 [details] Patch V2 Attachment 104820 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9478294 New failing tests: fast/block/float/fit_line_below_floats.html
Alexandru Chiculita
Comment 4 2011-08-23 05:09:42 PDT
Created attachment 104824 [details] Patch V4 Added test_expectations
Alexandru Chiculita
Comment 5 2011-08-23 05:24:57 PDT
Created attachment 104827 [details] Patch V5 Fixed comment style in Skipped files.
Dave Hyatt
Comment 6 2011-08-23 12:21:17 PDT
Comment on attachment 104827 [details] Patch V5 r=me
WebKit Review Bot
Comment 7 2011-08-23 12:54:41 PDT
Comment on attachment 104827 [details] Patch V5 Clearing flags on attachment: 104827 Committed r93628: <http://trac.webkit.org/changeset/93628>
WebKit Review Bot
Comment 8 2011-08-23 12:54:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.