Text overlaps with the floats https://bugs.webkit.org/show_bug.cgi?id=66671

Source/WebCore:

The problem was that LineWidth::fitBelowFloats is not updating the m_left and m_right fields.
Next time LineWidth::shrinkAvailableWidthForNewFloatIfNeeded was called the width was recalculated
using the old values, making the line bigger.

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-23
Reviewed by David Hyatt.

Test: fast/block/float/fit_line_below_floats.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::LineWidth::fitBelowFloats):

LayoutTests:

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-23
Reviewed by David Hyatt.

* fast/block/float/fit_line_below_floats.html: Added.
* platform/chromium/test_expectations.txt:
* platform/gtk/Skipped:
* platform/mac/fast/block/float/fit_line_below_floats-expected.png: Added.
* platform/mac/fast/block/float/fit_line_below_floats-expected.txt: Added.
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/82604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93628 268f45cc-cd09-0410-ab3c-d52691b4dbfc